--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="20dp"
-        app:itemWidth="1dp"
-        app:oneSeftRotate="true"
-        android:layout_height="80dp"/>
+        android:layout_width="50dp"
+        app:itemWidth="3dp"
+        app:oneSeftRotate="false"
+        android:layout_height="50dp"/>
 </android.support.constraint.ConstraintLayout>
