--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="50dp"
         app:itemWidth="3dp"
+        android:id="@+id/wheelprogress"
         app:oneSeftRotate="false"
+        android:visibility="visible"
         android:layout_height="50dp"/>
 </android.support.constraint.ConstraintLayout>
